--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto"
+  font-family: "Helvetica";
 }
 
 h2 {
@@ -54,12 +54,13 @@ input[type="text"] {
   border-radius: 5px;
   border: none;
   color: white;
+    transition: 0.3s;
 }
 
 .email_capture_button:hover {
 
   background-color: #000080;
-      cursor: pointer;
+  cursor: pointer;
 }
 
 
@@ -97,15 +98,15 @@ input[type="text"] {
 /* Intro Containers */
 
 #intro {
-    background-size: cover;
-    background-position: center;
+  background-size: cover;
+  background-position: center;
   height: auto;
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
   justify-content: center;
   align-content: center;
-  height: 100vh;
+  height: 90vh;
 }
 
 #hero {
@@ -120,6 +121,79 @@ input[type="text"] {
 #hero_paragraph {
   padding: 0 10px 20px 10px;
 }
+
+
+.animation {
+  height: 70px;
+  overflow: hidden;
+  margin-left: 1rem;
+}
+
+.animation>div>div {
+  padding: 0.25rem 0.75rem;
+  height: 2.81rem;
+  margin-bottom: 2.81rem;
+  display: inline-block;
+}
+
+.animation div:first-child {
+  animation: text-animation 12s infinite;
+}
+
+.first div {
+  color: #20a7d8;
+}
+
+.second div {
+  color: #CD921E;
+}
+
+.third div {
+  color: #c10528;
+}
+
+@keyframes text-animation {
+  0% {
+    margin-top: 0;
+  }
+
+  10% {
+    margin-top: 0;
+  }
+
+  20% {
+    margin-top: -5.62rem;
+  }
+
+  30% {
+    margin-top: -5.62rem;
+  }
+
+  40% {
+    margin-top: -11.24rem;
+  }
+
+  60% {
+    margin-top: -11.24rem;
+  }
+
+  70% {
+    margin-top: -5.62rem;
+  }
+
+  80% {
+    margin-top: -5.62rem;
+  }
+
+  90% {
+    margin-top: 0;
+  }
+
+  100% {
+    margin-top: 0;
+  }
+}
+
 
 
 /* About Containers */
@@ -166,7 +240,7 @@ input[type="text"] {
   flex-direction: row;
   flex-flow: wrap;
   justify-content: center;
-    padding: 0px 10px 70px 10px;
+  padding: 0px 10px 70px 10px;
 
 }
 
@@ -315,14 +389,14 @@ footer {
 
 
 @media screen and (max-width: 1000px) {
-  
+
   .about_grid {
     width: 100%;
   }
-  
-    #about_container {
-  min-height: 400px;
-}
+
+  #about_container {
+    min-height: 400px;
+  }
 
   #about_left {
     min-height: 400px;
@@ -341,7 +415,7 @@ footer {
   #hero {
     padding: 0 10px 0 10px;
   }
-  
+
   input[type="text"] {
     width: 200px;
   }
@@ -350,10 +424,10 @@ footer {
     width: 150px;
 
   }
-  
+
   .overlay-content {
-  width: 80%;
-}
+    width: 80%;
+  }
 
 }
 
@@ -363,9 +437,9 @@ footer {
   #hero {
     padding: 0 10px 0 10px;
   }
-  
+
   #about {
-      min-height: 100vh;
+    min-height: 100vh;
   }
 
   #header_left {
@@ -378,6 +452,21 @@ footer {
 
 }
 
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px
+  }
+
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+
+  .email_capture_button {
+    width: 125px;
+  }
+}
 
 @media screen and (max-width: 410px) {
 
@@ -394,56 +483,4 @@ footer {
     width: 42%;
   }
 
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {
-    font-size: 20px
-  }
-
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-}
-
-.animation {
-  height:70px;
-  overflow:hidden;
-  margin-left: 1rem;
-}
-
-.animation > div > div {
-  padding: 0.25rem 0.75rem;
-  height:2.81rem;
-  margin-bottom: 2.81rem;
-  display:inline-block;
-}
-
-.animation div:first-child {
-  animation: text-animation 12s infinite;
-}
-
-.first div {
-  color:#20a7d8;
-}
-.second div {
-  color:#CD921E;
-}
-.third div {
-  color:#c10528;
-}
-
-@keyframes text-animation {
-  0% {margin-top: 0;}
-  10% {margin-top: 0;}
-  20% {margin-top: -5.62rem;}
-  30% {margin-top: -5.62rem;}
-  40% {margin-top: -11.24rem;}
-  60% {margin-top: -11.24rem;}
-  70% {margin-top: -5.62rem;}
-  80% {margin-top: -5.62rem;}
-  90% {margin-top: 0;}
-  100% {margin-top: 0;}
 }
