--- a/style.css
+++ b/style.css
@@ -1,21 +1,14 @@
 /* Entire Site Start */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
   height: 100vh;
-  font-family: "Helvetica";
+  font-family: 'Roboto', sans-serif;
   width: 100%;
   margin: 0;
   overflow-x: hidden;
 
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Helvetica"
 }
 
 h2 {
@@ -28,11 +21,12 @@ p {
 
 a {
   color: #256EFF;
+  text-decoration: none;
 }
 
 a:hover {
   color: #000080;
-    transition: 0.3s;
+  transition: 0.3s;
 }
 
 label {
@@ -111,7 +105,7 @@ button:hover {
   justify-content: center;
   align-content: center;
   height: 80vh;
-  }
+}
 
 #hero {
   max-width: 800px;
@@ -153,7 +147,7 @@ button:hover {
 }
 
 .third div {
-  color:  #256EFF;
+  color: #256EFF;
 }
 
 @keyframes text-animation {
@@ -242,7 +236,7 @@ button:hover {
 
 #FAQ_headline_section {
   background-color: #FFE74C;
-  margin-top:0;
+  margin-top: 0;
   padding: 40px;
 }
 
@@ -289,7 +283,6 @@ footer {
 #social_container {
   display: flex;
   flex-direction: row;
-  flex-flow: wrap;
   justify-content: center;
 }
 
@@ -352,8 +345,6 @@ footer {
   align-content: center;
 }
 
-/*pop-up */
-
 .overlay {
   height: 100vh;
   width: 0;
@@ -393,11 +384,9 @@ footer {
 }
 
 #pop-image {
-  max-height 400px;
+  max-height: 400px;
   max-width: 80%;
 }
-
-/*Responsive*/
 
 
 @media screen and (max-width: 1024px) {
@@ -409,14 +398,14 @@ footer {
   #header_left {
     width: 42%;
     margin-left: 0;
-        text-align: left;
+    text-align: left;
     padding: 0 0 0 20px;
   }
 
   #header_right {
     width: 42%;
     margin-right: 0;
-        text-align: right;
+    text-align: right;
   }
 
   .about_grid {
@@ -432,9 +421,9 @@ footer {
     max-height: 400px;
   }
 
-.FAQ_list {
-  width: 99%;
-}
+  .FAQ_list {
+    width: 99%;
+  }
 
   #hero {
     padding: 0 10px 0 10px;
@@ -453,12 +442,12 @@ footer {
 
 @media screen and (max-width: 480px) {
 
-#hero_paragraph_bullets {
- display: none; 
-}
+  #hero_paragraph_bullets {
+    display: none;
+  }
 
-.overlay-content {
-  padding-top: 25%;
-}
+  .overlay-content {
+    padding-top: 25%;
+  }
 
 }
